# dss-codec

./: .gitignore  LICENSE  README.md  ds2_lsp_codebook.npz  ds2_qp_codebook.npz  ds2decode.py  ffmpeg_ticket_reply.md
dss-codec/: CODEC_SPECIFICATION.md  Cargo.toml  README.md
dss-codec/src/: bitstream.rs  error.rs  lib.rs  main.rs  streaming.rs
dss-codec/src/codec/: common.rs  ds2_qp.rs  ds2_sp.rs  dss_sp.rs  mod.rs
dss-codec/src/crypto/: ds2_encrypted.rs
dss-codec/src/demux/: ds2.rs  dss.rs  mod.rs
dss-codec/src/output/: mod.rs  resample.rs  wav.rs
dss-codec/src/tables/: ds2_qp.rs  ds2_quant.rs  ds2_sp.rs  dss_sp.rs  mod.rs
dss-codec/tests/: integration.rs
dss-codec/tests/fixtures/: README.md  encrypted_aes128.ds2  encrypted_aes256.ds2  grundig_digta7_qp7.ds2
