[package]
name = "dss-codec"
version = "0.1.0"
edition = "2021"
description = "Native DSS/DS2 audio decoder (Olympus Digital Speech Standard)"
license = "MIT"

[[bin]]
name = "dss-decode"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
hound = "3"
rubato = "0.16"

[dev-dependencies]
approx = "0.5"
